<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/home_fragment">

    <fragment
        android:id="@+id/home_fragment"
        android:name="br.com.myfinances.ui.fragment.HomeFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_home_to_category"
            app:destination="@id/category_fragment" />

        <action
            android:id="@+id/action_home_to_account"
            app:destination="@id/account_fragment"/>

        <action
            android:id="@+id/action_home_to_entry"
            app:destination="@id/entry_fragment"/>

        <action
            android:id="@+id/action_home_to_dashboard"
            app:destination="@id/dashboard_fragment"/>

        <action
            android:id="@+id/action_home_to_report"
            app:destination="@id/report_fragment"/>

        <action
            android:id="@+id/action_home_to_config"
            app:destination="@id/configuration_fragment"/>
    </fragment>

    <fragment
        android:id="@+id/category_fragment"
        android:name="br.com.myfinances.ui.fragment.CategoryFragment"
        android:label="@string/categories"
        tools:layout="@layout/fragment_category">

        <action
            android:id="@+id/action_category_to_detail"
            app:destination="@id/category_detail_fragment"/>

        <action
            android:id="@+id/action_category_to_new"
            app:destination="@id/category_form_fragment"/>
    </fragment>

    <fragment
        android:id="@+id/category_detail_fragment"
        android:name="br.com.myfinances.ui.fragment.CategoryDetailFragment"
        android:label="@string/categories"
        tools:layout="@layout/fragment_category_detail">
        <action
            android:id="@+id/action_detail_to_form"
            app:destination="@id/category_form_fragment"/>
    </fragment>

    <fragment
        android:id="@+id/category_form_fragment"
        android:name="br.com.myfinances.ui.fragment.CategoryFormFragment"
        tools:layout="@layout/fragment_category_form"/>

    <fragment
        android:id="@+id/account_fragment"
        android:name="br.com.myfinances.ui.fragment.AccountFragment"
        android:label="@string/accounts"
        tools:layout="@layout/fragment_account"/>

    <fragment
        android:id="@+id/entry_fragment"
        android:name="br.com.myfinances.ui.fragment.EntryFragment"
        android:label="@string/entries"
        tools:layout="@layout/fragment_entry">

    </fragment>

    <fragment
        android:id="@+id/dashboard_fragment"
        android:name="br.com.myfinances.ui.fragment.DashboardFragment"
        android:label="@string/dashboard"
        tools:layout="@layout/fragment_dashboard">

    </fragment>

    <fragment
        android:id="@+id/report_fragment"
        android:name="br.com.myfinances.ui.fragment.ReportFragment"
        android:label="@string/report_options"
        tools:layout="@layout/fragment_report">
    </fragment>

    <fragment
        android:id="@+id/configuration_fragment"
        android:name="br.com.myfinances.ui.fragment.ConfigurationFragment"
        android:label="@string/configurations"
        tools:layout="@layout/fragment_configuration">

    </fragment>

</navigation>